# my-competition-secmind

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  my_query_logs.json  pyproject.toml  search.bat  test_attck.py  test_qdrant.py
.github/workflows/: ci.yml
docs/: architecture.md  contracts.md  operations-guide.md  work-packages.md
examples/: vulnerable_app.py
scripts/: ingest_knowledge.py  search_knowledge.py
src/secmind/: __init__.py  agents.py  api.py  attck.py  config.py  guardrail.py  ingest.py  ledger.py  llm.py  memory.py  orchestrator.py  sandbox.py  schemas.py  service.py  skills_loader.py  tools.py  tools_pentagi.py
tests/: conftest.py  test_api.py  test_attck_memory_ids.py  test_guardrail.py  test_ingest.py  test_ledger.py  test_llm.py  test_memory.py  test_orchestrator.py  test_pentagi.py  test_query_log.py  test_tools.py
